fix, on gui, lnf